# 3Doodle

./: .gitignore  README.md  activate.sh  environment.yml  pyproject.toml  requirements.txt  test_render.py  train.py  viewer.py
configs/: all.yaml  curve.yaml
configs/3doodle/: benz.yaml  toycar.yaml  toyhorse.yaml
configs/3doodle_sq/: bear.yaml  snowman.yaml
configs/nerf_synthetic/: chair.yaml  drums.yaml  hotdog.yaml  lego.yaml  mic.yaml  ship.yaml
docs/: index.html
project_page/css/: styles.css
project_page/js/: bulma_toggle.js
src/doodle3d/: modules.py  sketcher.py
src/doodle3d/curve/: network.py
src/doodle3d/dataset/: base.py  nerf.py  ours.py
src/doodle3d/loss/: clip.py  lpips.py  main.py
src/doodle3d/superquadric/: contours.py  network.py  units.py
src/doodle3d/utils/: arguments.py  io.py  math_utils.py  misc.py
